Corrections to comments. Part 2